@@ -1,3 +1,7 @@
+- localedrake, drakx-finish-install:
+  o fix proposing Belgium when lang is "nl" and locales-fr is not installed
+    (same for Canada with lang "fr" and locales-en not installed) (#36413)
+
 Version 10.6.3 - 9 January 2008, by Thierry Vignaud
 
 - handle new drivers: atl2 (ethernet), snd-virtuoso
